Added Sidebar style

--- a/components/ui/Sidebar/Sidebar.module.css
+++ b/components/ui/Sidebar/Sidebar.module.css
@@ -3,7 +3,7 @@
   }
   
   .sidebar {
-    @apply h-full flex flex-col text-base shadow-xl overflow-y-auto overflow-x-hidden;
+    @apply h-full flex flex-col bg-white text-base shadow-xl overflow-y-auto overflow-x-hidden;
     -webkit-overflow-scrolling: touch !important;
   }
   
