--- a/components/common/SidebarLayout/SidebarLayout.module.css
+++ b/components/common/SidebarLayout/SidebarLayout.module.css
@@ -5,12 +5,12 @@
   .header {
     @apply sticky top-0 pl-4 py-4 pr-6
     flex items-center justify-between 
-    bg-accent-0 box-border w-full z-10;
+    box-border w-full z-10;
     min-height: 66px;
   }
   
   .container {
-    @apply flex flex-col flex-1 box-border;
+    @apply flex flex-col flex-1 box-border px-4;
   }
   
   @screen lg {
