Sidebar dark bg color

--- a/components/ui/Sidebar/Sidebar.module.css
+++ b/components/ui/Sidebar/Sidebar.module.css
@@ -3,8 +3,9 @@
   }
   
   .sidebar {
-    @apply h-full flex flex-col bg-white text-base shadow-xl overflow-y-auto overflow-x-hidden;
+    @apply h-full flex flex-col text-base shadow-xl overflow-y-auto overflow-x-hidden;
     -webkit-overflow-scrolling: touch !important;
+    background-color: var(--accent-0);
   }
   
   .backdrop {
