Input style fix

--- a/components/ui/Input/input.module.css
+++ b/components/ui/Input/input.module.css
@@ -1,6 +1,7 @@
 .root{
-    @apply appearance-none min-w-0 w-full border border-gray-300 border-opacity-10 py-2 px-4 text-base rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:placeholder-gray-400;
+    @apply appearance-none min-w-0 w-full border py-2 px-4 text-base rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:placeholder-gray-400;
     background-color: var(--accent-1);
+    border-color: var(--accent-2);
     
 
 }
