--- a/components/ui/Button/button.module.css
+++ b/components/ui/Button/button.module.css
@@ -1,3 +1,8 @@
 .root{
-    @apply bg-indigo-600 hover:bg-gray-700 px-4 py-3 rounded-md text-white text-sm tracking-wide uppercase focus:outline-none;
+    @apply px-4 py-3 rounded-md text-sm tracking-wide uppercase focus:outline-none;
+    background:  var(--accent-9);
+    color:  var(--accent-0)
+}
+.root:hover {
+    background:  var(--accent-7);
 }
