--- a/assets/base.css
+++ b/assets/base.css
@@ -26,8 +26,8 @@
     --violet: #7928ca;
     --violet-dark: #4c2889;
   
-    --accent-0: #fff;
-    --accent-1: #fafafa;
+    --accent-0: #ffffff;
+    --accent-1: #F8F8F8;
     --accent-2: #eaeaea;
     --accent-3: #999999;
     --accent-4: #888888;
@@ -42,7 +42,7 @@
   }
   
   [data-theme='dark'] {
-    --primary: #000000;
+    --primary: #060606;
     --primary-2: #111;
     --secondary: #ffffff;
     --secondary-2: #f1f3f5;
@@ -60,10 +60,10 @@
     --accent-7: #eaeaea;
     --accent-6: #999999;
     --accent-5: #888888;
-    --accent-4: #666666;
+    --accent-4: #555555;
     --accent-3: #444444;
-    --accent-2: #333333;
-    --accent-1: #111111;
+    --accent-2: #141414;
+    --accent-1: #0C0C0C;
     --accent-0: #000;
   }
   
