--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -1,9 +1,11 @@
 
 .root{
-    @apply mb-12 mx-auto flex-grow flex items-center justify-between px-8 sm:px-6;
-    border: 1px solid;
-    border-color: var(--accent-1);
-    
+    @apply z-10 mb-12 mx-auto flex-grow flex items-center justify-between px-8 sm:px-6;
+    border-bottom: 1px solid;
+    border-color: var(--accent-2); 
+    position: sticky;
+    top: 0%;
+    background: var(--primary);
 }
 
 .nav{
