--- a/components/ProductCard/product-card.module.css
+++ b/components/ProductCard/product-card.module.css
@@ -1,9 +1,14 @@
 .root{
-    @apply cursor-pointer w-full overflow-hidden relative px-3 py-6 md:px-6;
+    @apply cursor-pointer w-full overflow-hidden relative px-3 py-6 md:px-6 transition ease-out;
     background: var(--accent-1);
     border: 1px solid;
     border-color: var(--accent-2);
 }
+.root:hover img{
+    transform: scale(105%);
+    transition: all ease-out 200ms;
+}
+
 .title{
     @apply font-semibold text-lg mb-1;
     color: var(--accent-9);
