--- a/components/CollectionsCard/CollectionsCard.module.css
+++ b/components/CollectionsCard/CollectionsCard.module.css
@@ -4,7 +4,7 @@
 }
 
 .link{
-    @apply py-8 text-8xl tracking-tighter uppercase focus:outline-none;
+    @apply py-8 text-3xl tracking-tighter uppercase lg:text-8xl focus:outline-none ;
     color: var(--accent-7);
     transition: all ease-out 150ms;
 }
